[refactor] collect -> list 변경 - #95